--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "html2epub",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "Convert a collection of HTML documents to an EPUB archive",
   "preferGlobal": "true",
-  "main": "index.js",
+  "main": "lib/index.js",
   "bin": "index.js",
   "author": "Fabien Cazenave",
   "license": "MIT",
-  "keywords": ["html", "epub", "ebook", "converter", "scraper"],
+  "keywords": [ "html", "epub", "ebook", "converter", "scraper" ],
   "repository" : {
     "type": "git",
     "url": "git://github.com/fabi1cazenave/node-ebook.git"
@@ -17,5 +17,13 @@
     "cheerio": "*",
     "mime": "*"
   },
-  "engines": { "node": "*" }
+  "devDependencies": {
+    "mocha": "*"
+  },
+  "scripts": {
+    "test": "mocha -R nyan"
+  },
+  "engines": {
+    "node": "*"
+  }
 }
